--- a/public/index.html
+++ b/public/index.html
@@ -42,8 +42,8 @@
     ></script>
     <!-- built files will be auto injected -->
     <script>
-      document.querySelectorAll(".nav-link").addEventListener("click", () => {
-        document.querySelector(".navbar-toggler").click();
+      $(".nav-link").on("click", () => {
+        $(".navbar-toggler").click();
       });
     </script>
   </body>
